<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:enabled="true">

        <item
            android:id="@+id/nav_timeline"
            android:enabled="true"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/timeline" />

        <item
            android:id="@+id/nav_meizi"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/meizi" />

        <!--<item-->
            <!--android:id="@+id/nav_neihan"-->
            <!--android:enabled="true"-->
            <!--android:icon="@drawable/ic_mood_black_24dp"-->
            <!--android:title="@string/neihan_tuijian" />-->

        <item
            android:id="@+id/nav_info"
            android:enabled="true"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/info" />

    </group>
</menu>